--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                                 <i class="fas fa-file-alt me-2"></i> রিপোর্ট
                             </a>
                         </li>
+                        <li class="nav-item mt-auto">
+                            <a class="nav-link" href="#" onclick="logout()">
+                                <i class="fas fa-sign-out-alt me-2"></i> লগআউট
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -345,7 +350,7 @@
     <!-- Chart.js for charts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Custom JS -->
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 
     <!-- Add this to the sidebar navigation -->
     <li class="nav-item">
