--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ashhasib - All-in-One Digital Marketing Agency Solution</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/testimonials-slider.css">
+    <link rel="stylesheet" href="assets/css/ui-improvements.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -225,38 +227,79 @@
                 <span>Reviews collected from</span>
                 <img src="assets/images/trustpilot-logo.svg" alt="Trustpilot">
             </div>
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <p>"When we used Hasib he was a great support on our website designers. He was thorough and responsive and delivered with high quality. We would definitely recommend him for website design and development."</p>
-                    <div class="testimonial-author">
-                        <img src="assets/images/testimonials/author-1.jpg" alt="Client">
-                        <div>
-                            <strong>Client Name</strong>
-                            <span>Company</span>
+            <div class="testimonials-slider-wrapper"></div>
+                <button class="slider-btn slider-btn-prev" aria-label="Previous testimonial">
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <div class="testimonials-slider">
+                    <div class="testimonials-track">
+                        <div class="testimonial-card">
+                            <p>"When we used Hasib he was a great support on our website designers. He was thorough and responsive and delivered with high quality. We would definitely recommend him for website design and development."</p>
+                            <div class="testimonial-author">
+                                <img src="assets/images/testimonials/author-1.jpg" alt="Client">
+                                <div>
+                                    <strong>Client Name</strong>
+                                    <span>Company</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <p>"Great work! Hasib helped me all the way through my projects now. He really takes ownership of the work and delivers great results. I will continue working with him on other projects."</p>
+                            <div class="testimonial-author">
+                                <img src="assets/images/testimonials/author-2.jpg" alt="Client">
+                                <div>
+                                    <strong>Client Name</strong>
+                                    <span>Company</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <p>"Hasib has helped me create simple of high quality websites. He is very responsive and delivers campaigns. 100% very responsive and very thorough when it comes to work. He understood exactly what I was looking for."</p>
+                            <div class="testimonial-author">
+                                <img src="assets/images/testimonials/author-3.jpg" alt="Client">
+                                <div>
+                                    <strong>Client Name</strong>
+                                    <span>Company</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <p>"Working with Hasib was an absolute pleasure. His expertise in digital marketing and web development helped us achieve our goals faster than expected. Highly professional and reliable!"</p>
+                            <div class="testimonial-author">
+                                <img src="assets/images/testimonials/author-1.jpg" alt="Client">
+                                <div>
+                                    <strong>Sarah Johnson</strong>
+                                    <span>Marketing Director</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <p>"Hasib's attention to detail and commitment to excellence is unmatched. He transformed our online presence and helped us generate more leads. I can't recommend him enough!"</p>
+                            <div class="testimonial-author">
+                                <img src="assets/images/testimonials/author-2.jpg" alt="Client">
+                                <div>
+                                    <strong>Michael Chen</strong>
+                                    <span>CEO, Tech Startup</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <p>"Outstanding service! Hasib delivered our project on time and exceeded all expectations. His technical skills and creative approach made all the difference. Will definitely work with him again."</p>
+                            <div class="testimonial-author">
+                                <img src="assets/images/testimonials/author-3.jpg" alt="Client">
+                                <div>
+                                    <strong>Emily Rodriguez</strong>
+                                    <span>Business Owner</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="testimonial-card">
-                    <p>"Great work! Hasib helped me all the way through my projects now. He really takes ownership of the work and delivers great results. I will continue working with him on other projects."</p>
-                    <div class="testimonial-author">
-                        <img src="assets/images/testimonials/author-2.jpg" alt="Client">
-                        <div>
-                            <strong>Client Name</strong>
-                            <span>Company</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Hasib has helped me create simple of high quality websites. He is very responsive and delivers campaigns. 100% very responsive and very thorough when it comes to work. He understood exactly what I was looking for."</p>
-                    <div class="testimonial-author">
-                        <img src="assets/images/testimonials/author-3.jpg" alt="Client">
-                        <div>
-                            <strong>Client Name</strong>
-                            <span>Company</span>
-                        </div>
-                    </div>
-                </div>
+                <button class="slider-btn slider-btn-next" aria-label="Next testimonial">
+                    <i class="fas fa-chevron-right"></i>
+                </button>
             </div>
+            <div class="slider-dots"></div>
         </div>
     </section>
 
@@ -352,5 +395,8 @@
     </footer>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/scroll-animations.js"></script>
+    <script src="assets/js/testimonials-slider.js"></script>
+    <script src="assets/js/ui-enhancements.js"></script>
 </body>
 </html>
